# OdySpace

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: arrow_speed.mtl  bomb.mtl  bunker1.mtl  clock.mtl  dead_tree.mtl  laser.mtl  laser_item_menu.mtl  rocket.mtl  shield.mtl  ship.mtl  ship_2.mtl  ship_3.mtl  ship_bird.mtl  ship_supreme.mtl  skull.mtl  triangle.mtl  trump.mtl  turret.mtl
app/src/main/cpp/: collision.cpp  collision_sam.cpp  triangle.cpp  triangle.h
app/src/main/res/anim/: scale.xml
app/src/main/res/drawable/: button.xml  button_main.xml  button_main_clicked.xml  button_pause.xml  button_pause_clicked.xml  button_pause_game.xml  button_pause_img.xml  button_reset_skull.xml  button_resume_game.xml  button_unpressed.xml  cancel_bitmap.xml  confirm.xml  confirm_pressed.xml  confirm_unpressed.xml  drawable_corner.xml  drawable_grey_corner.xml  drawable_grey_corner_pressed.xml  drawable_shop.xml  drawable_shop_clicked.xml  drawable_white_corner.xml  drawer_button.xml  drawer_button_pressed.xml  drawer_button_unpressed.xml  exit_button.xml  grey_corner.xml  grey_corner_pressed.xml  grey_transparent_drawable.xml  play_bitmap.xml  progress_bar.xml  transition_button_main.xml  transition_corner.xml  transition_drawable_shop.xml  transition_pause_button.xml  white_corner.xml
app/src/main/res/layout/: activity_main.xml  activity_shop.xml  button_pause.xml  button_shop.xml  expand_button.xml  fragment_page.xml  game_params.xml  my_linear_layout.xml  new_levels.xml  new_main.xml  new_settings.xml  new_shop.xml  parameters_layout.xml  pause_layout.xml  progress_bar.xml  purchase_list.xml  select_item_layout.xml  shop_text_view.xml
app/src/main/res/layout-land/: activity_main.xml  activity_shop.xml  fragment_page.xml  shop_text_view.xml
app/src/main/res/menu/: toolbar_menu.xml
app/src/main/res/raw/: cube_map_fs.glsl  cube_map_vs.glsl  diffuse_fs.glsl  exlosion_vs.glsl  explosion_fs.glsl  noise_map_fs.glsl  noise_map_vs.glsl  particule_fs.glsl  specular_fs.glsl  specular_fs_2.glsl  specular_test_fs.glsl  specular_test_vs.glsl
app/src/main/res/values-hdpi/: dimens.xml
app/src/main/res/values-land-hdpi/: dimens.xml
app/src/main/res/values-land-ldpi/: dimens.xml
app/src/main/res/values-land-mdpi/: dimens.xml
app/src/main/res/values-land-xhdpi/: dimens.xml
app/src/main/res/values-land-xxhdpi/: dimens.xml
app/src/main/res/values-land-xxxhdpi/: dimens.xml
app/src/main/res/values-ldpi/: dimens.xml
app/src/main/res/values-mdpi/: dimens.xml
app/src/main/res/values-port-hdpi/: dimens.xml
(+315 files in other folders)
